k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidstringapp-1
  namespace: default
  labels:
    app: sidstringapp-1
spec:
  type: ClusterIP
  selector:
    app: sidstringapp-1
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
